// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders correctly (snapshot) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="rounded-full items-center justify-center flex-row bg-blue-500 active:bg-blue-600 py-3 px-6 "
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    className="flex-row items-center"
  >
    <Text
      className="font-semibold text-white text-base"
    >
      Snapshot Button
    </Text>
  </View>
</View>
`;

exports[`Button Component renders variant secondary correctly (snapshot) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="rounded-full items-center justify-center flex-row bg-gray-500 active:bg-gray-600 py-3 px-6 "
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    className="flex-row items-center"
  >
    <Text
      className="font-semibold text-white text-base"
    >
      Secondary
    </Text>
  </View>
</View>
`;
